# qt-snippets

CustomTimer/: CMakeLists.txt  CustomTimer.cpp  CustomTimer.h
qopenglwidget-and-qpainter/: .gitignore  BasedOGLWidget.cpp  BasedOGLWidget.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  Shaders.cpp  Shaders.h  SubOGLWidget.cpp  SubOGLWidget.h  main.cpp
